[gd_scene load_steps=7 format=3 uid="uid://devfqwbwpqxty"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_n21xo"]
[ext_resource type="Texture2D" uid="uid://bahm76nacd0dx" path="res://assets/zombie_1.png" id="3_bswte"]
[ext_resource type="PackedScene" uid="uid://vpbs6vjemmyl" path="res://aditionalScenes/stats.tscn" id="5_12475"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_glg4v"]
size = Vector2(27, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4i3o2"]
size = Vector2(27, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pctlv"]
size = Vector2(29, 30)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 7
safe_margin = 2.5
script = ExtResource("1_n21xo")

[node name="CollisionShapeForWorld" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_glg4v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 2.38419e-07)
rotation = -1.5708
scale = Vector2(0.167048, 0.180413)
texture = ExtResource("3_bswte")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2DForBullets" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_4i3o2")
debug_color = Color(0.890196, 0.309804, 0.239216, 0.419608)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_metadata_flags = 0
radius = 16.0
max_neighbors = 20

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_pctlv")

[node name="Stats" parent="." instance=ExtResource("5_12475")]

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_path_update_timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
